Mon Jan 01 12:56:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/query.c:
	- remove some warning compiling with SUN compiler
	- Happy New Year

Fri Dec 29 20:43:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: remove warning and optimize

Fri Dec 29 20:42:41 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: remove warnings

Fri Dec 29 20:05:00 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h: cleanup

Fri Dec 29 20:03:30 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/rpc_ct_param.c:
	* src/ctlib/unittests/rpc_ct_setparam.c src/odbc/odbc.c:
	- remove warnings

Fri Dec 29 17:18:42 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/log.c:
	- use localtime_r if available

Fri Dec 29 10:06:56 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/log.c:
	- avoid locking if no logging

Tue Dec 26 15:57:38 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h	src/ctlib/unittests/array_bind.c:
	* src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/get_send_data.c:
	* src/ctlib/unittests/lang_ct_param.c:
	* src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/dbutil.c src/dblib/rpc.c:
	* src/dblib/xact.c src/dblib/unittests/common.h:
	* src/dblib/unittests/t0016.c src/odbc/connectparams.c:
	* src/odbc/descriptor.c src/odbc/error.c:
	* src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/prepare_query.c src/odbc/unittests/common.h:
	* src/odbc/unittests/describecol.c src/pool/config.c:
	* src/pool/main.c src/pool/member.c src/pool/stream.c:
	* src/pool/user.c src/pool/util.c:
	* src/replacements/readpassphrase.c:
	* src/replacements/strtok_r.c src/replacements/vasprintf.c:
	* src/server/login.c src/server/unittest.c:
	* src/tds/config.c src/tds/convert.c src/tds/data.c:
	* src/tds/getmac.c src/tds/iconv.c src/tds/locale.c:
	* src/tds/login.c src/tds/net.c src/tds/numeric.c: