@@ -1,3 +1,11 @@
+Tue Jan  2 15:42:09 EST 2007	JK Lowden <jklowden@schemamania.org>
+	* include/dblib.h include/tds.h
+	* src/apps/tsql.c
+	* src/dblib/dblib.c src/dblib/dbutil.c
+	* src/tds/iconv.c src/tds/login.c src/tds/net.c
+	* src/tds/token.c src/tds/util.c
+	- replace tds_client_msg with tdserror()
+	
 Mon Jan 01 12:56:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/dblib.c src/tds/query.c:
 	- remove some warning compiling with SUN compiler
